--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron">
+            <img class="robo" alt="Robotron" src="img/robotron-rosa.png">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
@@ -98,18 +98,6 @@
             </form>
         </section>
 
-        <section class="robotron">
-            <section class="botoes">
-                <button class="alterar" alterar onclick="trocaImagem('Azul')">Robotron Azul</button>
-                <button class="alterar" alterar onclick="trocaImagem('Amarelo')">Robotron Amarelo</button>
-                <button class="alterar" alterar onclick="trocaImagem('Branco')">Robotron Branco</button>
-                <button class="alterar" alterar onclick="trocaImagem('Preto')">Robotron Preto</button>
-                <button class="alterar" alterar onclick="trocaImagem('Rosa')">Robotron Rosa</button>
-                <button class="alterar" alterar onclick="trocaImagem('Vermelho')">Robotron Vermelho</button>
-            </section>
-            <img class="robo" src="/img/Robotron 2000 - Azul.png" alt="Robotron">
-            <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
-        </section>
     </main>
 
     <script src="js/main.js"></script>
